style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    overflow: auto;
}


/* HAMBURGER MENU */
.hamburger-menu {
    position: absolute;
    z-index: 3;
    right: 35px;
    top: 35px;
    cursor: pointer;
    transition: all 0.5s ease-out;
    overflow: hidden; }
    .hamburger-menu .btn-line {
      width: 28px;
      height: 3px;
      margin: 0 0 5px 0;
      background: #fff;
      transition: all 0.5s ease-out; }
    .hamburger-menu.close {
      transform: rotate(180deg); }
      .hamburger-menu.close .btn-line:nth-child(1) {
        transform: rotate(45deg) translate(5px, 5px); }
      .hamburger-menu.close .btn-line:nth-child(2) {
        opacity: 0; }
      .hamburger-menu.close .btn-line:nth-child(3) {
        transform: rotate(-45deg) translate(7px, -6px); }

/* NAV-MENU-Overlay*/
.menu {
  position: fixed;
  top: 0;
  width: 100%;
  opacity: 0.9;
  visibility: hidden;
}

.menu.show {
  visibility: visible;
}

.menu-nav {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  justify-content: center;
  float: left;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background: #373737;
  list-style: none;
  transform: translate3d(0, -100%, 0);
  transition: all 0.5s ease-out;
}

.menu-nav.show {
  transform: translate3d(0, 0, 0);
}

.menu .nav-item {
  transform: translate3d(600px, 0, 0);
  transition: all 0.5s ease-out;
  margin-bottom: 30px;
}

.menu .nav-item.show {
  transform: translate3d(0, 0, 0);
}

.menu .nav-item.current > a {
  color: #40E0D0;
}

.menu .nav-link {
  display: inline-block;
  position: relative;
  font-size: 70px;
  font-family: 'Oswald', sans-serif;
  text-transform: uppercase;
  font-weight: 500;
  color: #fff;
  text-decoration: none;
  transition: all 0.5s ease-out;
}

.menu .nav-link:hover {
  color: #40E0D0;
}

.nav-intem:nth-child(1) {
  transition-delay: 0.1s;
}

.nav-intem:nth-child(2) {
  transition-delay: 0.2s;
}

.nav-intem:nth-child(3) {
  transition-delay: 0.3s;
}

.nav-intem:nth-child(4) {
  transition-delay: 0.4s;
}

/*FRONT-PAGE HEADER*/
header {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/Siluette\ Pariserviken.jpg) no-repeat center center fixed;
    background-size: cover;
    background-attachment: fixed;
    min-height: calc(100vh - 150px);
    width: 100%;
}

#header-text {
  margin-top: 25vh;
  width: 400px;
  color: white;
  margin: 30vh auto;
  text-align: center;
}

#header-text h1 {
  font-size: 3.5rem;
  font-family: 'Kaushan Script', cursive;
  letter-spacing: 3px;
  border-bottom: solid 2px white;
  border-bottom-width: 100%;
}

#header-text p {
  font-size: 0.9rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.225rem;
  padding: 10px 0 0 0;
  font-family: 'Source Sans Pro', Helvetica, sans-serif;
}

/*ABOUT HEADER*/
#header-about {
  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/about-header.jpg) 75% 25%;
  background-size: cover;
  background-attachment: fixed;
  min-height: 50vh;
  width: 100%;
}
#header-text-about {
  margin-top: 20vh;
  width: 220px;
  color: white;
  margin: 15vh auto;
  text-align: center;
}

#header-text-about h1{
  font-size: 3rem;
  font-family: 'Abril FatFace', cursive;
  letter-spacing: 3px;
  border-bottom: solid 2px white; 
  border-bottom-width: 100%;
  text-transform: uppercase;
  font-weight: 400;
}

#header-text-about p{
  font-size: 0.9rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.225rem;
  padding: 10px 0 0 0;
  font-family: 'Source Sans Pro', Helvetica, sans-serif;
}

/*CONTACT HEADER*/
#header-contact {
  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/contact-header.jpg) no-repeat center center fixed;
  background-size: cover;
  background-attachment: fixed;
  min-height: 50vh;
  width: 100%;
}

#header-text-contact {
  margin-top: 20vh;
  width: 275px;
  color: white;
  margin: 15vh auto;
  text-align: center;
}

#header-text-contact h1 {
  font-size: 3rem;
  font-family: 'Abril FatFace', cursive;
  letter-spacing: 3px;
  border-bottom: solid 2px white; 
  border-bottom-width: 100%;
  text-transform: uppercase;
  font-weight: 400;
}

#header-text-contact p {
  font-size: 0.9rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.225rem;
  padding: 10px 0 0 0;
  font-family: 'Source Sans Pro', Helvetica, sans-serif;
}


/*MAIN CONTENT*/
.text-container {
  min-height: 40vh;
  width: 100%;
  background: white;
  overflow: hidden;
}

.text-content {
  font-family: 'Oswald', sans-serif;
  padding: 40px;
  margin-left: 15vw;
}

.text-content h2 {
  font-size: 2.2rem;
  padding: 10px;
}

.text-content p {
  font-size: 1.2rem;
  padding: 10px;
  margin-right: 30vw;
}

.content-boxes {
  width: 100%;
  height: 40vh;
  background: #FFC787;
  display: grid;
    grid-template-areas: 
    'box-content-1 box-content-2 box-content-3';
    grid-template-columns: repeat(3, 1fr);
}


.box-content {
  margin: 20px;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 3px #464646;
  border: 1px solid rgba(245, 245, 245, 0.603);
}

.overlay {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgba(0, 0, 0, 0.801);
  min-width: 365px;
}

.box-content:hover .overlay {
  opacity: 1;
}

.text {
  font-family: 'Oswald', sans-serif;
  color: whitesmoke;
}

.text h3 {
  font-size: 1.8rem;
  margin: 30px 30px 0px;
  padding: 10px;
}

.text p {
  font-size: 1.2rem;
  margin-left: 30px;
  margin-right: 25px;
  padding: 10px;
}

.box-content-1 {
  grid-area: box-content-1;
  background: url(img/Dansworkshop2.jpg);
  background-size: cover;

}

.box-content-2 {
  grid-area: box-content-2;
  background: url(img/Dansoutdoor2.jpg);
  background-size: cover;
}

.box-content-3 {
  grid-area: box-content-3;
  background: url(img/Inför\ Fotbolls\ EM\ damer1.jpg);
  background-size: cover;
}

/*MAIN CONTENT ABOUT*/


/*MAIN CONTENT CONTACT*/
.contact p a {
  text-decoration: none;
  color: #3D3833;
}

.contact p a:hover {
  color: rgb(110, 110, 110);
}

footer {
    background: #3D3833;
    width: 100%;
    height: 20vh;
    display: grid;
    grid-template-areas: 
    'footer-content-1 footer-content-2 footer-content-3'
    'branding branding branding';
    grid-template-columns: repeat(3, 1fr);
}

.footer-content {
  margin: 0 auto;
  text-align: center;
  color: whitesmoke;
  font-family: 'Oswald', serif;
  padding: 10px;
}

.footer-content-1 {
  grid-area: footer-content-1;
}

.footer-content-2 {
  grid-area: footer-content-2;
}

.footer-content-3 {
  grid-area: footer-content-3;
}

.branding {
  grid-area: branding;
  text-align: center;
  color: rgb(116, 116, 116);
}

footer h3 {
  padding: 20px;
}

footer a {
  text-decoration: none;
  color: whitesmoke;
}

footer a:hover {
  color: #40E0D0;
  transition: .5s ease;
}

.fa-facebook {
  font-size: 25px;
  padding: 0 5px 0 0;
}

.fa-instagram {
  font-size: 25px;
}

@media screen and (max-width: 1440px) {
  .text-content {
    font-family: 'Oswald', sans-serif;
    padding: 20px;
    margin-left: 15vw;
  }

  .text-content p {
    font-size: 1.2rem;
    padding: 10px;
    margin-right: 25vw;
  }
}

@media screen and (max-width: 1024px) {
  .text-container {
    min-height: 25vh;
    width: 100%;
    background: white;
    overflow: auto;
  }
  
  .text-content {
    font-family: 'Oswald', sans-serif;
    padding: 10px;
    margin-left: 5vw;
  }

  .text-content p {
    font-size: 1.2rem;
    padding: 10px;
    margin-right: 10vw;
  }
}

@media screen and (max-width: 768px) {
  .text-container {
    min-height: 35vh;
    width: 100%;
    background: white;
    overflow: auto;
  }
  
  .text-content {
    font-family: 'Oswald', sans-serif;
    padding: 10px;
    margin-left: 5vw;
  }

  .text-content p {
    font-size: 1.2rem;
    padding: 10px;
    margin-right: 10vw;
  }

  .content-boxes {
    width: 100%;
    height: 100vh;
    background: #FFC787;
    display: grid;
      grid-template-areas: 
      'box-content-1'
      'box-content-2'
      'box-content-3';
      grid-template-columns: repeat(1, 1fr);
  }

  .box-content {
    margin: 20px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px #464646;
    border: 1px solid rgba(245, 245, 245, 0.603);
  }
}

@media screen and (max-width: 500px) {
  #header-text {
    margin-top: 25vh;
    width: 300px;
    color: white;
    margin: 30vh auto;
    text-align: center;
  }

  #header-text h1 {
    font-size: 2.5rem;
    font-family: 'Kaushan Script', cursive;
    letter-spacing: 3px;
    border-bottom: solid 2px white;
    border-bottom-width: 100%;
  }
  
  #header-text p {
    font-size: 0.8rem;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    padding: 5px 0 0 0;
    font-family: 'Source Sans Pro', Helvetica, sans-serif;
  }
  
  
  .text-container {
    min-height: 35vh;
    width: 100%;
    background: white;
    overflow: auto;
  }
  
  .text-content {
    font-family: 'Oswald', sans-serif;
    padding: 5px;
    margin-left: 2vw;
  }

  .text-content h2 {
    font-size: 1.5rem;
    padding: 5px;
  }

  .text-content p {
    font-size: 1.05rem;
    padding: 5px;
    margin-right: 2vw;
  }

  .content-boxes {
    width: 100%;
    height: 100vh;
    background: #FFC787;
    display: grid;
      grid-template-areas: 
      'box-content-1'
      'box-content-2'
      'box-content-3';
      grid-template-columns: repeat(1, 1fr);
  }

  .box-content {
    margin: 10px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px #464646;
    border: 1px solid rgba(245, 245, 245, 0.603);
  }

  .text h3 {
    font-size: 1.2rem;
    margin: 10px 10px 0px;
    padding: 5px;
  }
  
  .text p {
    font-size: 0.9rem;
    margin-left: 10px;
    margin-right: 15px;
    padding: 5px;
  }
  
  footer {
    background: #3D3833;
    width: 100%;
    height: 40vh;
    display: grid;
    grid-template-areas: 
    'footer-content-1'
    'footer-content-2'
    'footer-content-3'
    'branding';
    grid-template-columns: repeat(1, 1fr);
  }

  .footer-content {
  margin: 0 auto;
  text-align: center;
  color: whitesmoke;
  font-family: 'Oswald', serif;
  padding: 5px;
  margin: 0;
  }

  .footer-content-1 {
  grid-area: footer-content-1;
  }

  .footer-content-2 {
  grid-area: footer-content-2;
  }

  .footer-content-3 {
  grid-area: footer-content-3;
  }

  footer h3 {
    padding: 5px;
  }

  .branding {
  grid-area: branding;
  text-align: center;
  color: rgb(116, 116, 116);
  }
}

@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
     header {
       background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/sunset.png) no-repeat center center fixed;
       background-size: cover;
       background-attachment: fixed;
       min-height: calc(100vh - 150px);
       width: 100%;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
     }

     #header-text {
      margin-top: 25vh;
      width: 320px;
      color: white;
      margin: 30vh auto;
      text-align: center;
    }
    
    #header-text h1 {
      font-size: 2.7rem;
      font-weight: 700;
      font-family: 'Kaushan Script', cursive;
      letter-spacing: 2px;
      border-bottom: solid 2px white;
      border-bottom-width: 100%;
    }
    
    #header-text p {
      font-size: 0.8rem;
      font-weight: 400;
      text-transform: uppercase;
      letter-spacing: 0.125rem;
      padding: 10px 0 0 0;
      font-family: 'Source Sans Pro', Helvetica, sans-serif;
    }
     
}

